fix hero height issue on ie 11

--- a/common/styles/graphic/hero.styl
+++ b/common/styles/graphic/hero.styl
@@ -9,6 +9,7 @@
 	position relative
 	margin-bottom 1.5em
 	&__hed
+		width 100%
 		color set-gray('lightest')
 		text-shadow 0 0 8px #333
 		order 2
